--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-select": "^3.1.0",
     "recharts": "^1.8.5",
     "styled-components": "^5.1.0",
     "styled-components-modifiers": "^1.2.5",
