--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "react-bootstrap": "^1.0.1",
     "react-datepicker": "^3.0.0",
     "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0",
     "react-linkify": "^1.0.0-alpha",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-router-sitemap": "^1.2.0",
+    "react-scripts": "^3.4.3",
     "react-select": "^3.1.0",
     "recharts": "^1.8.5",
     "styled-components": "^5.1.0",
@@ -34,7 +36,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint src/**/*.js src/**/*.jsx"
+    "lint": "eslint src/**/*.js src/**/*.jsx",
+    "sitemap": "node sitemapBuilder.js"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -52,6 +55,11 @@
     ]
   },
   "devDependencies": {
+    "@babel/cli": "^7.11.6",
+    "@babel/core": "^7.11.6",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/preset-react": "^7.10.4",
+    "@babel/register": "^7.11.5",
     "babel-eslint": "^10.1.0",
     "babel-plugin-styled-components": "^1.10.7",
     "eslint": "^6.8.0",
@@ -74,7 +82,7 @@
   },
   "lint-staged": {
     "src/**/*.{js,jsx}": [
-      "eslint",
+      "eslint --fix",
       "pretty-quick --staged",
       "git add"
     ]
