feat: edit dependencies

--- a/package.json
+++ b/package.json
@@ -16,17 +16,18 @@
     "moment": "^2.26.0",
     "numeral": "^2.0.6",
     "prop-types": "^15.7.2",
-    "react": "^16.13.1",
+    "react": "^17.0.2",
     "react-bootstrap": "^1.0.1",
     "react-datepicker": "^3.0.0",
-    "react-dom": "^16.13.1",
+    "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "react-helmet-async": "^1.1.2",
     "react-linkify": "^1.0.0-alpha",
     "react-router-dom": "^5.2.0",
     "react-router-sitemap": "^1.2.0",
     "react-scripts": "^3.4.3",
-    "react-select": "^3.1.0",
-    "recharts": "^1.8.5",
+    "react-select": "^4.3.0",
+    "recharts": "^2.1.5",
     "styled-components": "^5.1.0",
     "styled-components-modifiers": "^1.2.5",
     "styled-normalize": "^8.0.7"
