--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "date-fns": "^2.14.0",
+    "html-to-image": "^1.10.4",
     "moment": "^2.26.0",
     "numeral": "^2.0.6",
     "prop-types": "^15.7.2",
