fix: change the time on the chart

--- a/.env.production.example
+++ b/.env.production.example
@@ -1,1 +1,3 @@
-REACT_APP_API_HOST="http://exmaple.one"
+REACT_APP_API_COSMOS = 'cosmos api'
+REACT_APP_API_PERSISTENCE = 'persistence api'
+REACT_APP_API_BITSONG = 'bitsong api'
